# C.A.A.P

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Code block/: Smooth.cpp  aligning.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Hfile/: Smooth.h  baryer.h  bilateral.h  filehandler.h  fitsaligner.h  fitscalibration.h  fitsmerger.h
Src/: Smooth.cpp  baryer.cpp  bilateral.cpp  filehandler.cpp  fitsaligner.cpp  fitscalibration.cpp  fitsmerger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
cfitsio/include/: fitsio.h
cfitsio/lib/: cfitsio.lib
cfitsio/lib/cfitsio-4.3.1/: cfitsio-config-version.cmake  cfitsio-config.cmake
cfitsio/lib/cmake/: cfitsio-targets-debug.cmake  cfitsio-targets.cmake
cfitsio/lib/pkgconfig/: cfitsio.pc
debug/: Capture_00001.fits  Capture_00002.fits  Capture_00003.fits  Capture_00004.fits  Capture_00005.fits
zlib/lib/: zlibd.lib  zlibstaticd.lib
zlib/share/pkgconfig/: zlib.pc
